jquery simulate added

--- a/app/design/frontend/creo/default/layout/local.xml
+++ b/app/design/frontend/creo/default/layout/local.xml
@@ -19,7 +19,10 @@
 	 <action method="addItem"><type>skin_js</type><script>js/jquery-confirm.min.js</script></action>
   <action method="removeItem"><type>skin_js</type><name>js/slideshow.js</name></action>
    <!--<action method="addCss"><stylesheet>css/rwd.css</stylesheet></action>-->
-
+   
+    <action method="addItem"><type>skin_js</type><script>js/simulate/jquery.simulate.ext.js</script></action>
+	<action method="addItem"><type>skin_js</type><script>js/simulate/jquery.simulate.js</script></action>
+	
 </reference>
 
 
