taking latest code

--- a/app/design/frontend/creo/default/template/catalog/category/view.phtml
+++ b/app/design/frontend/creo/default/template/catalog/category/view.phtml
@@ -74,6 +74,7 @@
 
 
 <div class="row">
+<!-- <div class="col-xs-12">abc</div> -->
 <div class="col heading-area col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <?php if($this->IsRssCatalogEnable() && $this->IsTopCategory()): ?>
         <a href="<?php echo $this->getRssLink() ?>" class="link-rss"><?php echo $this->__('Subscribe to RSS Feed') ?></a>
