--- a/app/design/frontend/creo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/footer.phtml
@@ -127,18 +127,21 @@ jQuery( document ).ready( function($){
 </script>
 
 <script>
-
 jQuery(window).load(function(){
-    var design = decodeURIComponent(getQueryVar('universal_categories'));
-    var changeFrom = getQueryVar('universal_categories');
-    console.log('here1'+design);
-	
-	var currentelement = jQuery("#universal_categories-"+design).text();
-	
-    console.log('here2'+currentelement);
-    if(changeFrom.indexOf("view all") <= -1) {
-		$('currentvalue').replace('<a href="#" class="opener" id="currentvalue">'+currentelement+'</a>');
-	}
+    //jQuery('#currentvalue').text('View All');
+    var url = window.location.href;
+    var array = url.split('?');
+    var paramStr = array[1];
+    var params = paramStr.split("universal_categories=");
+    console.log(params);
+    var design = getQueryVar('universal_categories').trim();
+    if(design) {
+        console.log('here1'+design);
+        var currentEl = jQuery("#universal_categories-"+design).text();
+        if(currentEl) {
+            $('currentvalue').replace('<a href="#" class="opener" id="currentvalue">'+currentEl+'</a>');
+        }
+    }
     //var search2 = getQueryVar('design').toLowerCase();
     //console.log(search2);
     //location.href.replace("design="+design, "design=3araby");
@@ -156,5 +159,12 @@ jQuery(window).load(function(){
 //        //ensure that current one is selected as well
 //    }
 }); 
-
+/*setTimeout(function(){
+    //alert("test");
+    var currentval = jQuery('#currentvalue').text().trim();
+    if(currentval == "") {
+        jQuery('#currentvalue').text('View All');
+    }
+    console.log("test");
+}, 1170);*/
 </script>
