Commented some debugging code.

--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -84,7 +84,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                     }		
                                     //cat_attrs[k] = onlyid;									
                                     cat_attrs[k] = v.text;
-                                    console.log("+++"+v.text.toLowerCase());
+                                    //console.log("+++"+v.text.toLowerCase());
                                     jQuery(v).attr('href', 'javascript:void(0);');
                                     var changeTo = jQuery(this).text().toLowerCase();
                                     var changeidss = jQuery(this).attr('id');
@@ -124,7 +124,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                     }
                                 });
 //                                //jQuery.query.set("design", "3araby");
-                            console.log(cat_attrs);
+                            //console.log(cat_attrs);
                             });
                         </script>
 
