--- a/app/design/frontend/creo/default/template/extensions/sellers/trending.phtml
+++ b/app/design/frontend/creo/default/template/extensions/sellers/trending.phtml
@@ -40,6 +40,7 @@ $_helper = $this->helper('catalog/output');
     <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
     <div class="category-products">
+    <h2> Trending </h2>
     <?php //echo $this->getToolbarHtml() ?>
         <?php // List mode  ?>
         <?php if ($this->getMode() != 'grid'): ?>
