--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5393,13 +5393,80 @@ dl {margin: 0 0 10px;}
     right: 0;
     bottom: -10px;
 }
-
-
-
-
-
-
-
+.cate-drop-holder:after{
+	display: block;
+	content: '';
+	clear: both;
+}
+.cate-drop-holder{
+	margin: 0 0 10px;
+	text-align: center;
+}
+.cate-drop-holder .search-by {
+    background: #ef4f61;
+    color: #fff;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 3px 10px;
+}
+.cate-drop-holder .cate-drop-frame {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+    margin: 0 25px 0 0;
+    position: relative;
+    z-index: 22;
+}
+.cate-drop-holder .cate-drop-frame .opener {
+    border: 1px solid #ccc;
+    color: #222;
+    display: inline-block;
+    font: 13px/20px "Roboto Condensed",Helvetica,Arial,sans-serif;
+    margin: 0;
+    padding: 0 18px 0 7px;
+    position: relative;
+    text-transform: uppercase;
+    vertical-align: middle;
+    width: 130px;
+}
+.cate-drop-holder .cate-drop-frame .opener{text-decoration: none;}
+.cate-drop-holder .cate-drop-frame .opener:before{
+	border-color: #888 transparent transparent;
+    border-style: solid;
+    border-width: 5px 4px 0;
+    content: "";
+    height: 19px;
+    position: absolute;
+    right: 5px;
+    top: 8px;
+    width: 9px;
+}
+.cate-drop-holder .cate-drop-frame ul {
+    background: #fff;
+    border: 1px solid #ccc;
+    display: none;
+    font: 13px/18px "Roboto Condensed",Helvetica,Arial,sans-serif;
+    left: auto;
+    list-style: outside none none;
+    margin: -1px 0 0;
+    padding: 0;
+    position: absolute;
+    right: 0;
+    text-transform: uppercase;
+    width: 130px;
+}
+.cate-drop-holder .cate-drop-frame:hover ul{display: block;}
+.cate-drop-holder .cate-drop-frame:hover ul a{
+    border-top: 1px solid #ccc;
+    color: #222;
+    display: block;
+    padding: 5px 7px;
+}
+.cate-drop-holder .cate-drop-frame:hover ul a:hover{
+	text-decoration: none;
+	color: #000;
+}
+.cate-drop-holder .cate-drop-frame:hover ul li:first-child a {border:none;}
 
 @media print {
 	.page-print .subtitle {margin-bottom: 99px;}
