--- a/app/design/frontend/creo/default/template/extensions/collections/categories.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/categories.phtml
@@ -204,7 +204,8 @@ $_helper = $this->helper('catalog/output');
     </div>
 </div>
 
-
+<div class="row">
+<div class="col-xs-12">
 <div class="design_categories_attributes shipping-methods">
 <h3><span>DESIGN CATEGORIES</span></h3>
 <ul>
@@ -229,10 +230,12 @@ $_helper = $this->helper('catalog/output');
     <?php endforeach ?>
 </ul>
 </div>
+</div>
+</div>
 <style>
 .design_categories_attributes {}
 .design_categories_attributes ul { float: left; width: 100%; padding: 0; margin: 0;}
-.design_categories_attributes ul li { width: 24%; display: inline-block; margin: 0 1% 20px 0;}
+.design_categories_attributes ul li { width: 24.25%; display: inline-block; margin: 0 1% 16px 0;}
 .design_categories_attributes ul li:nth-child(4n) { margin-right: 0;}
 .design_categories_attributes ul li img { width: 100%;}
 
