--- a/app/design/frontend/creo_mobile/default/layout/local.xml
+++ b/app/design/frontend/creo_mobile/default/layout/local.xml
@@ -4,32 +4,30 @@
 <default>
 <reference name="head">
 
- <action method="addCss"><stylesheet>jquery.mCustomScrollbar.css</stylesheet></action>
-  <action method="setText"><text><![CDATA[<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed">]]></text></action>
-  <action method="addItem"><type>skin_js</type><script>js/jquery.main.js</script></action>
-  <action method="addItem"><type>skin_js</type><script>js/jquery.mCustomScrollbar.js</script></action>
-	<action method="addItem"><type>skin_js</type><script>bootstrap/js/bootstrap.min.js</script></action>
-   <action method="addCss"><stylesheet>bootstrap/css/bootstrap.css</stylesheet></action> 
-   <action method="addCss"><stylesheet>style.css</stylesheet></action>
-  <action method="removeItem"><type>skin_css</type><name>css/styles.css</name></action>
-   <action method="addCss"><stylesheet>custom.css</stylesheet></action>
-	 <action method="addCss"><stylesheet>css/custom.sami.css</stylesheet></action>
-	 <action method="addCss"><stylesheet>css/jquery-confirm.min.css</stylesheet></action>
-	 <action method="addItem"><type>skin_js</type><script>js/jquery-confirm.min.js</script></action>
-  <action method="removeItem"><type>skin_js</type><name>js/slideshow.js</name></action>
-   <!--<action method="addCss"><stylesheet>css/rwd.css</stylesheet></action>-->
-   
-    <action method="addItem"><type>skin_js</type><script>js/simulate/jquery.simulate.ext.js</script></action>
-	<action method="addItem"><type>skin_js</type><script>js/simulate/jquery.simulate.js</script></action>
-	
+<action method="addCss"><stylesheet>jquery.mCustomScrollbar.css</stylesheet></action>
+<action method="setText"><text><![CDATA[<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed">]]></text></action>
+<action method="addItem"><type>skin_js</type><script>js/jquery.main.js</script></action>
+<action method="addItem"><type>skin_js</type><script>js/jquery.mCustomScrollbar.js</script></action>
+<action method="addItem"><type>skin_js</type><script>bootstrap/js/bootstrap.min.js</script></action>
+<action method="addItem"><type>skin_js</type><name>js/bootstrpjPushMenu.js</name></action>
+<action method="addCss"><stylesheet>bootstrap/css/bootstrap.min.css</stylesheet></action>
+<action method="addCss"><stylesheet>style.css</stylesheet></action>
+<action method="removeItem"><type>skin_css</type><name>css/styles.css</name></action>
+<action method="addCss"><stylesheet>custom.css</stylesheet></action>
+<action method="addCss"><stylesheet>css/custom.sami.css</stylesheet></action>
+<action method="addCss"><stylesheet>css/jquery-confirm.min.css</stylesheet></action>
+<action method="addItem"><type>skin_js</type><script>js/jquery-confirm.min.js</script></action>
+<action method="removeItem"><type>skin_js</type><name>js/slideshow.js</name></action>
+<!--<action method="addCss"><stylesheet>css/rwd.css</stylesheet></action>-->
+<!-- <action method="addItem"><type>skin_js</type><script>js/simulate/jquery.simulate.ext.js</script></action>
+<action method="addItem"><type>skin_js</type><script>js/simulate/jquery.simulate.js</script></action> -->
 </reference>
 
-
 	<reference name="footer">
-			 <remove name="footer_currency" /> 
+			 <remove name="footer_currency" />
 			 <remove name="footer_links" />
-			 <remove name="footer_links2" /> 
-			 <remove name="store_switcher" /> 
+			 <remove name="footer_links2" />
+			 <remove name="store_switcher" />
 			 <remove name="cms_footer_links" />
 			<!-- <remove name="footer.newsletter" />-->
 			<!--<block type="cms/block" name="help_footer" as="help_footer">
@@ -61,8 +59,13 @@
 	
 	<reference name="content">
 	<block type="auguria_sliders/cms_page_slider" name="auguria_sliders" template="auguria/sliders/slider.phtml" before="-"/>
-	
 	</reference>
+
+  <reference name="content">
+<block type="page/html_topmenu" name="catalog.topnav" template="page/html/topmenu.phtml">
+    <block type="page/html_topmenu_renderer" name="catalog.topnav.customcategories" template="page/html/topmenu/customcategories.phtml"/>
+</block>
+  </reference>
 	
 	<reference name="content">
 	<block type="cms/block" name="main_content-top">
