--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -115,27 +115,26 @@ form select { width: 232px; height: 35px; position: relative; font-family: 'Robo
 p.style1 { font-family: 'Roboto Condensed', sans-serif; font-size: 19px; color: #888888; position: relative; top: 12px; }
 #wrapper { overflow: hidden; position: relative; background: #fff; }
 #wrapper > .container { padding: 0; }
-#header { margin-bottom: 26px; position: relative; z-index: 9999; }
+#header {position: relative; z-index: 9999; }
 #header:before { display: block; position: absolute; bottom: 0; left: 15px; right: 15px; background: #eee; height: 1px; content: ''; }
 #header { display: block; content: ''; clear: both; }
 #header .col-xs-12,#header .col-xs-3{position:inherit;}
 .logo { display: block; width: auto; margin: 15px auto; max-width: 100px; }
 .logo img { display: block; width: 100%; height: auto; }
 .main-menu { height: 80px; }
-.main-menu .bgr-icon {font-size:30px;color:#ed5164;padding:6px 8px;border:1px solid #ed5164;top:25px;cursor:pointer;}
+.main-menu .bgr-icon {font-size:30px;color:#ed5164;padding:6px 8px;border:1px solid #ed5164;top:18px;cursor:pointer;border-radius:0;}
 .main-menu .main-menu-content { display: none;}
 .main-menu .main-menu-content #nav {position:absolute; top: 88px; left: 0; width: 100%; background-color: #fff; z-index: 555; }
+body.canvas-slid #disable_view{position: fixed;z-index: 9998;background-color: rgba(0, 0, 0, 0.35);height: 100%;width: 100%;display: block;}
 #nav:after { display: block; content: ''; clear: both; }
 #nav ol { margin: 0; padding: 0; list-style: none;/*	letter-spacing: -1px;*/ text-transform: uppercase; font: 15px/21px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #nav ol > li { display: block; margin: 0; }
-#nav ol > li > a { display: block; padding: 5px 15px; position: relative; }
-#nav ol > li a:hover { text-decoration: none; }
-#nav ol > li > a:after { bottom: -2px; content: ""; height: 2px; left: 0; position: absolute; right: 0; }
-#nav ol > li.active > a:before, #nav ol > li:hover > a:before { position: absolute; bottom: 0; left: 0; right: 0; height: 5px; background: #000; content: ''; }
-#nav .drop-parent:hover > a:before { transform: skewX(0deg); -moz-transform: skewX(0deg); -webkit-transform: skewX(0deg); -ms-transform: skewX(0deg); }
-.small-header #nav .drop-parent:hover > a:before { transform: skewX(-30deg); -moz-transform: skewX(-30deg); -webkit-transform: skewX(-30deg); -ms-transform: skewX(-30deg); }
+#nav ol > li > a { display: block; padding:10px 20px; position: relative;font-size:17px; }
+#nav ol > li a:hover { text-decoration: none;color:#fff;background-color:#333;}
+#nav ol > li.active .drop{display: block;}
+#nav ol > li.active a{color:#fff;background-color:#ef4f61;}
 #header .right-area { text-align: right; }
-#header .cart { text-align: center; display: inline-block; vertical-align: top; width: auto; padding: 0px; position: relative; z-index: 33; margin-top: 25px; }
+#header .cart {text-align:center;display:inline-block;vertical-align: top; width: auto; padding: 0px; position: relative; z-index: 33; margin-top: 25px; }
 #header .cart .opener { font: bold 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; color: #fff; text-transform: uppercase; position: relative; display: block; padding: 14px 16px; z-index: 22; width: auto; }
 #header .cart .opener:hover { text-decoration: none; opacity: 0.9; }
 #header .cart .opener:before { font-family: 'fontello'; line-height: 16px; font-size: 22px; height: 16px; display: inline-block; vertical-align: middle; margin: 0 6px 0 0; content: '\e80d'; }
@@ -262,7 +261,7 @@ input[type="text"], input[type="password"], input.email { display: block; backgr
 .modal-holder .heading-holder h3 { font: bold 30px/34px "Roboto Condensed", Helvetica, Arial, sans-serif; color: #222; margin: 0; position: relative; padding: 0 10px; text-transform: uppercase; display: inline-block; vertical-align: middle; }
 .modal-holder .heading-holder h3:before, .modal-holder .heading-holder h3:after { content: ""; position: absolute; height: 4px; background: #eee; left: 100%; width: 9999px; top: 50%; margin-top: -2px; }
 .modal-holder .heading-holder h3:before { right: 100%; left: auto; }
-#nav .drop { position: relative; top: 100%; left: 0px; right: 0px; border-bottom: 8px solid #f16a79; margin: 0; padding: 0; background: #fff; display: none; }
+#nav .drop { position: relative; top: 100%; left: 0px; right: 0px; margin: 0; padding: 0; background: #fff; display: none; }
 #nav ol > li:hover .drop { display: block; }
 #nav .product-list { margin: 0; padding: 10px 0; list-style: none; border-width: 1px 0; border-style: solid; border-color: #dfdfdf; overflow: hidden; }
 #nav .product-list li { float: left; width: 120px; margin: 0 4px 8px 3px; position: relative; }
@@ -710,12 +709,12 @@ font: bold 15px/20px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #nav .links-area h2 { margin: 0 0 18px; letter-spacing: 0.3px; text-transform: uppercase; color: #222; font: bold 18px/20px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #nav .links-area .links-frame { overflow: hidden;padding:10px 15px; }
 #nav .links-area .sorting-items {margin:0 10px 0 0;padding: 0;list-style:none;width:100%; font: bold 16px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;display:block; }
-#nav .links-area .sorting-items li { margin: 0 0 5px; }
-#nav .links-area .sorting-items a { color: #f16a79; }
+#nav .links-area .sorting-items li { margin: 0 0 5px;border-bottom:1px solid #eaeaea; }
+#nav .links-area .sorting-items a {color:#f16a79;background-color:transparent;}
 #nav .links-area .sorting-items a:hover { color: #000; }
-#nav .links-area .links { margin: 0 8px 0 0; padding: 0; list-style: none; float: left; width: 75px; font: 13px/16px "Roboto Condensed", Helvetica, Arial, sans-serif; }
-#nav .links-area .links li { margin: 5px 0 3px; }
-#nav .links-area .links a { color: #000; }
+#nav .links-area .links { margin:10px; padding: 0; list-style: none;display:block;}
+#nav .links-area .links li { margin: 5px 0 3px;border-bottom:1px solid #eaeaea; }
+#nav .links-area .links a { color: #000;background-color:transparent;}
 #nav .links-area .links a:hover { color: #f16a79; }
 #nav .featured-items { display: block; vertical-align: top; width: 100%; }
 #nav .featured-items .heading-holder { margin: 0; }
@@ -730,6 +729,10 @@ font: bold 15px/20px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #footer:before { background: #000; position: absolute; top: 0; bottom: 0; /*margin: 0 -9999px -9999px;
 	padding: 0 9999px 9999px;*/
 content: ''; width: 200%; left: -50%; }
+.navmenu-fixed-left{background:#F3F3F5;display:none;}
+.floatmenu li a{display: block;color: rgb(240, 240, 240) !important;font-size:1.1em;font-weight:300;
+border-bottom: 1px solid rgb(61, 62, 66);padding: 1em;text-transform: uppercase;}
+.floatmenu li a:hover {background: rgb(27, 29, 34) !important;}
 #footer .right-area { float: right; width: 208px; }
 .footer-form { margin: 0 0 8px; }
 .footer-form .form-row { overflow: hidden; }
